# guest_book

./: Cargo.toml  README.md
src/: backend_routes.rs  database.rs  error.rs  frontend_routes.rs  lib.rs  models.rs
static/: post_form_to_json.js  style.css  validate_form.js
templates/: error.html.hbs  index.html.tera  new_comment.html
