[package]
name = "guest_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0-rc.2", features = ["handlebars", "tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19.9"
rayon = "1.10.0"